[package]
name = "rocket-tracing-fairing-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = {version="1.0.148", features=["derive"]}
serde_json = "1.0.89"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
tracing-subscriber = {version="0.3.16", features=["env-filter", "json", "registry", "smallvec"]}
uuid = {version="1.2.2", features = ["v4"]}
yansi = "0.5.1"
