[package]
name = "rocket-tracing-fairing-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = {version="1.0.196", features=["derive"]}
serde_json = "1.0.113"
tracing = "0.1.37"
tracing-appender = "0.2.3"
tracing-log = "0.1.3"
tracing-subscriber = {version="0.3.18", features=["env-filter", "json", "registry", "smallvec"]}
uuid = {version="1.4.1", features = ["v4"]}
yansi = "0.5.1"
