[package]
name = "rocket-tracing-fairing-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = {version="0.3.18", features=["env-filter", "json", "registry", "smallvec"]}
uuid = {version="1.8.0", features = ["v4"]}
yansi = "0.5.1"
